fix cars list on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,37 @@ button:focus-visible {
   font-size: smaller;
 }
 
+.carslist-btns {
+  gap: 3px;
+    display: flex
+;
+    /* padding: 2px; */
+    margin-top: 10px;
+}
+
+.carslist-btn-details {
+  color: #ffffff;
+  background-color: #2158F5;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.carslist-btn-bid {
+  color: #ffffff;
+  background-color: #217E02;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.heading-md {
+  font-size: large;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
